// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ExecutionActions /> tests if feature restriction is applied on rerun button: repeat button should be disabled as cd, ci are not allowed 1`] = `
<div>
  <div
    class="Layout--horizontal StyledProps--main"
  >
    <span
      class="bp3-popover-wrapper bp3-dark"
    >
      <span
        class="bp3-popover-target"
      >
        <button
          aria-label="execution menu actions"
          class="bp3-button Button--button StyledProps--font StyledProps--main Button--with-current-color Button--iconOnly Button--withLeftIcon Button--variation Button--variation-icon"
          type="button"
        >
          <span
            class="bp3-icon StyledProps--main"
            data-icon="Options"
          >
            <svg
              fill="currentColor"
              height="16"
              viewBox="0 0 4 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <circle
                cx="2"
                cy="2"
                r="1.5"
              />
              <circle
                cx="2"
                cy="8"
                r="1.5"
              />
              <circle
                cx="2"
                cy="14"
                r="1.5"
              />
            </svg>
          </span>
        </button>
      </span>
    </span>
  </div>
</div>
`;

exports[`<ExecutionActions /> tests snapshot tests "Aborted" status: Menu 1`] = `
<ul
  class="bp3-menu"
>
  <a
    class="link"
    href="/account/TEST_ACCOUNT_ID/cd/orgs/TEST_ORG/projects/TEST_PROJECT/pipelines/TEST_PIPELINE/pipeline-studio/"
  >
    <li
      class=""
    >
      <div
        class="bp3-menu-item bp3-popover-dismiss"
      >
        <div
          class="bp3-text-overflow-ellipsis bp3-fill"
        >
          editPipeline
        </div>
      </div>
    </li>
  </a>
  <li
    class=""
  >
    <a
      class="bp3-menu-item bp3-popover-dismiss"
    >
      <div
        class="bp3-text-overflow-ellipsis bp3-fill"
      >
        pipeline.execution.actions.rerunPipeline
      </div>
    </a>
  </li>
  <li
    class=""
  >
    <a
      class="bp3-menu-item bp3-disabled"
      tabindex="-1"
    >
      <div
        class="bp3-text-overflow-ellipsis bp3-fill"
      >
        pipeline.execution.actions.abortPipeline
      </div>
    </a>
  </li>
  <li
    class=""
  >
    <a
      class="bp3-menu-item bp3-disabled"
      tabindex="-1"
    >
      <div
        class="bp3-text-overflow-ellipsis bp3-fill"
      >
        pipeline.execution.actions.pausePipeline
      </div>
    </a>
  </li>
  <li
    class=""
  >
    <a
      class="bp3-menu-item bp3-disabled"
      tabindex="-1"
    >
      <div
        class="bp3-text-overflow-ellipsis bp3-fill"
      >
        pipeline.execution.actions.resumePipeline
      </div>
    </a>
  </li>
</ul>
`;

exports[`<ExecutionActions /> tests snapshot tests "Aborted" status: container 1`] = `
<div>
  <div
    class="Layout--horizontal StyledProps--main"
  >
    <span
      class="bp3-popover-wrapper bp3-dark"
    >
      <span
        class="bp3-popover-target"
      >
        <button
          aria-label="execution menu actions"
          class="bp3-button Button--button StyledProps--font StyledProps--main Button--with-current-color Button--iconOnly Button--withLeftIcon Button--variation Button--variation-icon"
          type="button"
        >
          <span
            class="bp3-icon StyledProps--main"
            data-icon="Options"
          >
            <svg
              fill="currentColor"
              height="16"
              viewBox="0 0 4 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <circle
                cx="2"
                cy="2"
                r="1.5"
              />
              <circle
                cx="2"
                cy="8"
                r="1.5"
              />
              <circle
                cx="2"
                cy="14"
                r="1.5"
              />
            </svg>
          </span>
        </button>
      </span>
    </span>
  </div>
</div>
`;

exports[`<ExecutionActions /> tests snapshot tests "Expired" status: Menu 1`] = `
<ul
  class="bp3-menu"
>
  <a
    class="link"
    href="/account/TEST_ACCOUNT_ID/cd/orgs/TEST_ORG/projects/TEST_PROJECT/pipelines/TEST_PIPELINE/pipeline-studio/"
  >
    <li
      class=""
    >
      <div
        class="bp3-menu-item bp3-popover-dismiss"
      >
        <div
          class="bp3-text-overflow-ellipsis bp3-fill"
        >
          editPipeline
        </div>
      </div>
    </li>
  </a>
  <li
    class=""
  >
    <a
      class="bp3-menu-item bp3-popover-dismiss"
    >
      <div
        class="bp3-text-overflow-ellipsis bp3-fill"
      >
        pipeline.execution.actions.rerunPipeline
      </div>
    </a>
  </li>
  <li
    class=""
  >
    <a
      class="bp3-menu-item bp3-disabled"
      tabindex="-1"
    >
      <div
        class="bp3-text-overflow-ellipsis bp3-fill"
      >
        pipeline.execution.actions.abortPipeline
      </div>
    </a>
  </li>
  <li
    class=""
  >
    <a
      class="bp3-menu-item bp3-disabled"
      tabindex="-1"
    >
      <div
        class="bp3-text-overflow-ellipsis bp3-fill"
      >
        pipeline.execution.actions.pausePipeline
      </div>
    </a>
  </li>
  <li
    class=""
  >
    <a
      class="bp3-menu-item bp3-disabled"
      tabindex="-1"
    >
      <div
        class="bp3-text-overflow-ellipsis bp3-fill"
      >
        pipeline.execution.actions.resumePipeline
      </div>
    </a>
  </li>
</ul>
`;

exports[`<ExecutionActions /> tests snapshot tests "Expired" status: container 1`] = `
<div>
  <div
    class="Layout--horizontal StyledProps--main"
  >
    <span
      class="bp3-popover-wrapper bp3-dark"
    >
      <span
        class="bp3-popover-target"
      >
        <button
          aria-label="execution menu actions"
          class="bp3-button Button--button StyledProps--font StyledProps--main Button--with-current-color Button--iconOnly Button--withLeftIcon Button--variation Button--variation-icon"
          type="button"
        >
          <span
            class="bp3-icon StyledProps--main"
            data-icon="Options"
          >
            <svg
              fill="currentColor"
              height="16"
              viewBox="0 0 4 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <circle
                cx="2"
                cy="2"
                r="1.5"
              />
              <circle
                cx="2"
                cy="8"
                r="1.5"
              />
              <circle
                cx="2"
                cy="14"
                r="1.5"
              />
            </svg>
          </span>
        </button>
      </span>
    </span>
  </div>
</div>
`;

exports[`<ExecutionActions /> tests snapshot tests "Failed" status: Menu 1`] = `
<ul
  class="bp3-menu"
>
  <a
    class="link"
    href="/account/TEST_ACCOUNT_ID/cd/orgs/TEST_ORG/projects/TEST_PROJECT/pipelines/TEST_PIPELINE/pipeline-studio/"
  >
    <li
      class=""
    >
      <div
        class="bp3-menu-item bp3-popover-dismiss"
      >
        <div
          class="bp3-text-overflow-ellipsis bp3-fill"
        >
          editPipeline
        </div>
      </div>
    </li>
  </a>
  <li
    class=""
  >
    <a
      class="bp3-menu-item bp3-popover-dismiss"
    >
      <div
        class="bp3-text-overflow-ellipsis bp3-fill"
      >
        pipeline.execution.actions.rerunPipeline
      </div>
    </a>
  </li>
  <li
    class=""
  >
    <a
      class="bp3-menu-item bp3-disabled"
      tabindex="-1"
    >
      <div
        class="bp3-text-overflow-ellipsis bp3-fill"
      >
        pipeline.execution.actions.abortPipeline
      </div>
    </a>
  </li>
  <li
    class=""
  >
    <a
      class="bp3-menu-item bp3-disabled"
      tabindex="-1"
    >
      <div
        class="bp3-text-overflow-ellipsis bp3-fill"
      >
        pipeline.execution.actions.pausePipeline
      </div>
    </a>
  </li>
  <li
    class=""
  >
    <a
      class="bp3-menu-item bp3-disabled"
      tabindex="-1"
    >
      <div
        class="bp3-text-overflow-ellipsis bp3-fill"
      >
        pipeline.execution.actions.resumePipeline
      </div>
    </a>
  </li>
</ul>
`;

exports[`<ExecutionActions /> tests snapshot tests "Failed" status: container 1`] = `
<div>
  <div
    class="Layout--horizontal StyledProps--main"
  >
    <span
      class="bp3-popover-wrapper bp3-dark"
    >
      <span
        class="bp3-popover-target"
      >
        <button
          aria-label="execution menu actions"
          class="bp3-button Button--button StyledProps--font StyledProps--main Button--with-current-color Button--iconOnly Button--withLeftIcon Button--variation Button--variation-icon"
          type="button"
        >
          <span
            class="bp3-icon StyledProps--main"
            data-icon="Options"
          >
            <svg
              fill="currentColor"
              height="16"
              viewBox="0 0 4 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <circle
                cx="2"
                cy="2"
                r="1.5"
              />
              <circle
                cx="2"
                cy="8"
                r="1.5"
              />
              <circle
                cx="2"
                cy="14"
                r="1.5"
              />
            </svg>
          </span>
        </button>
      </span>
    </span>
  </div>
</div>
`;

exports[`<ExecutionActions /> tests snapshot tests "NotStarted" status: Menu 1`] = `
<ul
  class="bp3-menu"
>
  <a
    class="link"
    href="/account/TEST_ACCOUNT_ID/cd/orgs/TEST_ORG/projects/TEST_PROJECT/pipelines/TEST_PIPELINE/pipeline-studio/"
  >
    <li
      class=""
    >
      <div
        class="bp3-menu-item bp3-popover-dismiss"
      >
        <div
          class="bp3-text-overflow-ellipsis bp3-fill"
        >
          editPipeline
        </div>
      </div>
    </li>
  </a>
  <li
    class=""
  >
    <a
      class="bp3-menu-item bp3-disabled"
      tabindex="-1"
    >
      <div
        class="bp3-text-overflow-ellipsis bp3-fill"
      >
        pipeline.execution.actions.rerunPipeline
      </div>
    </a>
  </li>
  <li
    class=""
  >
    <a
      class="bp3-menu-item bp3-popover-dismiss"
    >
      <div
        class="bp3-text-overflow-ellipsis bp3-fill"
      >
        pipeline.execution.actions.abortPipeline
      </div>
    </a>
  </li>
  <li
    class=""
  >
    <a
      class="bp3-menu-item bp3-popover-dismiss"
    >
      <div
        class="bp3-text-overflow-ellipsis bp3-fill"
      >
        pipeline.execution.actions.pausePipeline
      </div>
    </a>
  </li>
  <li
    class=""
  >
    <a
      class="bp3-menu-item bp3-disabled"
      tabindex="-1"
    >
      <div
        class="bp3-text-overflow-ellipsis bp3-fill"
      >
        pipeline.execution.actions.resumePipeline
      </div>
    </a>
  </li>
</ul>
`;

exports[`<ExecutionActions /> tests snapshot tests "NotStarted" status: container 1`] = `
<div>
  <div
    class="Layout--horizontal StyledProps--main"
  >
    <span
      class="bp3-popover-wrapper"
    >
      <span
        class="bp3-popover-target"
      >
        <button
          aria-label="pipeline.execution.actions.pausePipeline"
          class="bp3-button Button--button StyledProps--font StyledProps--main Button--with-current-color Button--iconOnly Button--withLeftIcon Button--variation Button--variation-icon Button--size Button--small"
          tabindex="0"
          type="button"
        >
          <span
            class="bp3-icon bp3-icon-pause StyledProps--main"
            icon="pause"
          >
            <svg
              data-icon="pause"
              height="16"
              viewBox="0 0 16 16"
              width="16"
            >
              <desc>
                pause
              </desc>
              <path
                d="M6 3H4c-.55 0-1 .45-1 1v8c0 .55.45 1 1 1h2c.55 0 1-.45 1-1V4c0-.55-.45-1-1-1zm6 0h-2c-.55 0-1 .45-1 1v8c0 .55.45 1 1 1h2c.55 0 1-.45 1-1V4c0-.55-.45-1-1-1z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
        </button>
      </span>
    </span>
    <span
      class="bp3-popover-wrapper"
    >
      <span
        class="bp3-popover-target"
      >
        <button
          aria-label="pipeline.execution.actions.abortPipeline"
          class="bp3-button Button--button StyledProps--font StyledProps--main Button--with-current-color Button--iconOnly Button--withLeftIcon Button--variation Button--variation-icon Button--size Button--small"
          tabindex="0"
          type="button"
        >
          <span
            class="bp3-icon bp3-icon-stop StyledProps--main"
            icon="stop"
          >
            <svg
              data-icon="stop"
              height="16"
              viewBox="0 0 16 16"
              width="16"
            >
              <desc>
                stop
              </desc>
              <path
                d="M12 3H4c-.55 0-1 .45-1 1v8c0 .55.45 1 1 1h8c.55 0 1-.45 1-1V4c0-.55-.45-1-1-1z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
        </button>
      </span>
    </span>
    <span
      class="bp3-popover-wrapper bp3-dark"
    >
      <span
        class="bp3-popover-target"
      >
        <button
          aria-label="execution menu actions"
          class="bp3-button Button--button StyledProps--font StyledProps--main Button--with-current-color Button--iconOnly Button--withLeftIcon Button--variation Button--variation-icon"
          type="button"
        >
          <span
            class="bp3-icon StyledProps--main"
            data-icon="Options"
          >
            <svg
              fill="currentColor"
              height="16"
              viewBox="0 0 4 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <circle
                cx="2"
                cy="2"
                r="1.5"
              />
              <circle
                cx="2"
                cy="8"
                r="1.5"
              />
              <circle
                cx="2"
                cy="14"
                r="1.5"
              />
            </svg>
          </span>
        </button>
      </span>
    </span>
  </div>
</div>
`;

exports[`<ExecutionActions /> tests snapshot tests "Paused" status: Menu 1`] = `
<ul
  class="bp3-menu"
>
  <a
    class="link"
    href="/account/TEST_ACCOUNT_ID/cd/orgs/TEST_ORG/projects/TEST_PROJECT/pipelines/TEST_PIPELINE/pipeline-studio/"
  >
    <li
      class=""
    >
      <div
        class="bp3-menu-item bp3-popover-dismiss"
      >
        <div
          class="bp3-text-overflow-ellipsis bp3-fill"
        >
          editPipeline
        </div>
      </div>
    </li>
  </a>
  <li
    class=""
  >
    <a
      class="bp3-menu-item bp3-disabled"
      tabindex="-1"
    >
      <div
        class="bp3-text-overflow-ellipsis bp3-fill"
      >
        pipeline.execution.actions.rerunPipeline
      </div>
    </a>
  </li>
  <li
    class=""
  >
    <a
      class="bp3-menu-item bp3-popover-dismiss"
    >
      <div
        class="bp3-text-overflow-ellipsis bp3-fill"
      >
        pipeline.execution.actions.abortPipeline
      </div>
    </a>
  </li>
  <li
    class=""
  >
    <a
      class="bp3-menu-item bp3-disabled"
      tabindex="-1"
    >
      <div
        class="bp3-text-overflow-ellipsis bp3-fill"
      >
        pipeline.execution.actions.pausePipeline
      </div>
    </a>
  </li>
  <li
    class=""
  >
    <a
      class="bp3-menu-item bp3-popover-dismiss"
    >
      <div
        class="bp3-text-overflow-ellipsis bp3-fill"
      >
        pipeline.execution.actions.resumePipeline
      </div>
    </a>
  </li>
</ul>
`;

exports[`<ExecutionActions /> tests snapshot tests "Paused" status: container 1`] = `
<div>
  <div
    class="Layout--horizontal StyledProps--main"
  >
    <span
      class="bp3-popover-wrapper"
    >
      <span
        class="bp3-popover-target"
      >
        <button
          aria-label="pipeline.execution.actions.resumePipeline"
          class="bp3-button Button--button StyledProps--font StyledProps--main Button--with-current-color Button--iconOnly Button--withLeftIcon Button--variation Button--variation-icon Button--size Button--small"
          tabindex="0"
          type="button"
        >
          <span
            class="bp3-icon bp3-icon-play StyledProps--main"
            icon="play"
          >
            <svg
              data-icon="play"
              height="16"
              viewBox="0 0 16 16"
              width="16"
            >
              <desc>
                play
              </desc>
              <path
                d="M12 8c0-.35-.19-.64-.46-.82l.01-.02-6-4-.01.02A.969.969 0 005 3c-.55 0-1 .45-1 1v8c0 .55.45 1 1 1 .21 0 .39-.08.54-.18l.01.02 6-4-.01-.02c.27-.18.46-.47.46-.82z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
        </button>
      </span>
    </span>
    <span
      class="bp3-popover-wrapper"
    >
      <span
        class="bp3-popover-target"
      >
        <button
          aria-label="pipeline.execution.actions.abortPipeline"
          class="bp3-button Button--button StyledProps--font StyledProps--main Button--with-current-color Button--iconOnly Button--withLeftIcon Button--variation Button--variation-icon Button--size Button--small"
          tabindex="0"
          type="button"
        >
          <span
            class="bp3-icon bp3-icon-stop StyledProps--main"
            icon="stop"
          >
            <svg
              data-icon="stop"
              height="16"
              viewBox="0 0 16 16"
              width="16"
            >
              <desc>
                stop
              </desc>
              <path
                d="M12 3H4c-.55 0-1 .45-1 1v8c0 .55.45 1 1 1h8c.55 0 1-.45 1-1V4c0-.55-.45-1-1-1z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
        </button>
      </span>
    </span>
    <span
      class="bp3-popover-wrapper bp3-dark"
    >
      <span
        class="bp3-popover-target"
      >
        <button
          aria-label="execution menu actions"
          class="bp3-button Button--button StyledProps--font StyledProps--main Button--with-current-color Button--iconOnly Button--withLeftIcon Button--variation Button--variation-icon"
          type="button"
        >
          <span
            class="bp3-icon StyledProps--main"
            data-icon="Options"
          >
            <svg
              fill="currentColor"
              height="16"
              viewBox="0 0 4 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <circle
                cx="2"
                cy="2"
                r="1.5"
              />
              <circle
                cx="2"
                cy="8"
                r="1.5"
              />
              <circle
                cx="2"
                cy="14"
                r="1.5"
              />
            </svg>
          </span>
        </button>
      </span>
    </span>
  </div>
</div>
`;

exports[`<ExecutionActions /> tests snapshot tests "Queued" status: Menu 1`] = `
<ul
  class="bp3-menu"
>
  <a
    class="link"
    href="/account/TEST_ACCOUNT_ID/cd/orgs/TEST_ORG/projects/TEST_PROJECT/pipelines/TEST_PIPELINE/pipeline-studio/"
  >
    <li
      class=""
    >
      <div
        class="bp3-menu-item bp3-popover-dismiss"
      >
        <div
          class="bp3-text-overflow-ellipsis bp3-fill"
        >
          editPipeline
        </div>
      </div>
    </li>
  </a>
  <li
    class=""
  >
    <a
      class="bp3-menu-item bp3-disabled"
      tabindex="-1"
    >
      <div
        class="bp3-text-overflow-ellipsis bp3-fill"
      >
        pipeline.execution.actions.rerunPipeline
      </div>
    </a>
  </li>
  <li
    class=""
  >
    <a
      class="bp3-menu-item bp3-popover-dismiss"
    >
      <div
        class="bp3-text-overflow-ellipsis bp3-fill"
      >
        pipeline.execution.actions.abortPipeline
      </div>
    </a>
  </li>
  <li
    class=""
  >
    <a
      class="bp3-menu-item bp3-popover-dismiss"
    >
      <div
        class="bp3-text-overflow-ellipsis bp3-fill"
      >
        pipeline.execution.actions.pausePipeline
      </div>
    </a>
  </li>
  <li
    class=""
  >
    <a
      class="bp3-menu-item bp3-disabled"
      tabindex="-1"
    >
      <div
        class="bp3-text-overflow-ellipsis bp3-fill"
      >
        pipeline.execution.actions.resumePipeline
      </div>
    </a>
  </li>
</ul>
`;

exports[`<ExecutionActions /> tests snapshot tests "Queued" status: container 1`] = `
<div>
  <div
    class="Layout--horizontal StyledProps--main"
  >
    <span
      class="bp3-popover-wrapper"
    >
      <span
        class="bp3-popover-target"
      >
        <button
          aria-label="pipeline.execution.actions.pausePipeline"
          class="bp3-button Button--button StyledProps--font StyledProps--main Button--with-current-color Button--iconOnly Button--withLeftIcon Button--variation Button--variation-icon Button--size Button--small"
          tabindex="0"
          type="button"
        >
          <span
            class="bp3-icon bp3-icon-pause StyledProps--main"
            icon="pause"
          >
            <svg
              data-icon="pause"
              height="16"
              viewBox="0 0 16 16"
              width="16"
            >
              <desc>
                pause
              </desc>
              <path
                d="M6 3H4c-.55 0-1 .45-1 1v8c0 .55.45 1 1 1h2c.55 0 1-.45 1-1V4c0-.55-.45-1-1-1zm6 0h-2c-.55 0-1 .45-1 1v8c0 .55.45 1 1 1h2c.55 0 1-.45 1-1V4c0-.55-.45-1-1-1z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
        </button>
      </span>
    </span>
    <span
      class="bp3-popover-wrapper"
    >
      <span
        class="bp3-popover-target"
      >
        <button
          aria-label="pipeline.execution.actions.abortPipeline"
          class="bp3-button Button--button StyledProps--font StyledProps--main Button--with-current-color Button--iconOnly Button--withLeftIcon Button--variation Button--variation-icon Button--size Button--small"
          tabindex="0"
          type="button"
        >
          <span
            class="bp3-icon bp3-icon-stop StyledProps--main"
            icon="stop"
          >
            <svg
              data-icon="stop"
              height="16"
              viewBox="0 0 16 16"
              width="16"
            >
              <desc>
                stop
              </desc>
              <path
                d="M12 3H4c-.55 0-1 .45-1 1v8c0 .55.45 1 1 1h8c.55 0 1-.45 1-1V4c0-.55-.45-1-1-1z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
        </button>
      </span>
    </span>
    <span
      class="bp3-popover-wrapper bp3-dark"
    >
      <span
        class="bp3-popover-target"
      >
        <button
          aria-label="execution menu actions"
          class="bp3-button Button--button StyledProps--font StyledProps--main Button--with-current-color Button--iconOnly Button--withLeftIcon Button--variation Button--variation-icon"
          type="button"
        >
          <span
            class="bp3-icon StyledProps--main"
            data-icon="Options"
          >
            <svg
              fill="currentColor"
              height="16"
              viewBox="0 0 4 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <circle
                cx="2"
                cy="2"
                r="1.5"
              />
              <circle
                cx="2"
                cy="8"
                r="1.5"
              />
              <circle
                cx="2"
                cy="14"
                r="1.5"
              />
            </svg>
          </span>
        </button>
      </span>
    </span>
  </div>
</div>
`;

exports[`<ExecutionActions /> tests snapshot tests "ResourceWaiting" status: Menu 1`] = `
<ul
  class="bp3-menu"
>
  <a
    class="link"
    href="/account/TEST_ACCOUNT_ID/cd/orgs/TEST_ORG/projects/TEST_PROJECT/pipelines/TEST_PIPELINE/pipeline-studio/"
  >
    <li
      class=""
    >
      <div
        class="bp3-menu-item bp3-popover-dismiss"
      >
        <div
          class="bp3-text-overflow-ellipsis bp3-fill"
        >
          editPipeline
        </div>
      </div>
    </li>
  </a>
  <li
    class=""
  >
    <a
      class="bp3-menu-item bp3-disabled"
      tabindex="-1"
    >
      <div
        class="bp3-text-overflow-ellipsis bp3-fill"
      >
        pipeline.execution.actions.rerunPipeline
      </div>
    </a>
  </li>
  <li
    class=""
  >
    <a
      class="bp3-menu-item bp3-popover-dismiss"
    >
      <div
        class="bp3-text-overflow-ellipsis bp3-fill"
      >
        pipeline.execution.actions.abortPipeline
      </div>
    </a>
  </li>
  <li
    class=""
  >
    <a
      class="bp3-menu-item bp3-popover-dismiss"
    >
      <div
        class="bp3-text-overflow-ellipsis bp3-fill"
      >
        pipeline.execution.actions.pausePipeline
      </div>
    </a>
  </li>
  <li
    class=""
  >
    <a
      class="bp3-menu-item bp3-disabled"
      tabindex="-1"
    >
      <div
        class="bp3-text-overflow-ellipsis bp3-fill"
      >
        pipeline.execution.actions.resumePipeline
      </div>
    </a>
  </li>
</ul>
`;

exports[`<ExecutionActions /> tests snapshot tests "ResourceWaiting" status: container 1`] = `
<div>
  <div
    class="Layout--horizontal StyledProps--main"
  >
    <span
      class="bp3-popover-wrapper"
    >
      <span
        class="bp3-popover-target"
      >
        <button
          aria-label="pipeline.execution.actions.pausePipeline"
          class="bp3-button Button--button StyledProps--font StyledProps--main Button--with-current-color Button--iconOnly Button--withLeftIcon Button--variation Button--variation-icon Button--size Button--small"
          tabindex="0"
          type="button"
        >
          <span
            class="bp3-icon bp3-icon-pause StyledProps--main"
            icon="pause"
          >
            <svg
              data-icon="pause"
              height="16"
              viewBox="0 0 16 16"
              width="16"
            >
              <desc>
                pause
              </desc>
              <path
                d="M6 3H4c-.55 0-1 .45-1 1v8c0 .55.45 1 1 1h2c.55 0 1-.45 1-1V4c0-.55-.45-1-1-1zm6 0h-2c-.55 0-1 .45-1 1v8c0 .55.45 1 1 1h2c.55 0 1-.45 1-1V4c0-.55-.45-1-1-1z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
        </button>
      </span>
    </span>
    <span
      class="bp3-popover-wrapper"
    >
      <span
        class="bp3-popover-target"
      >
        <button
          aria-label="pipeline.execution.actions.abortPipeline"
          class="bp3-button Button--button StyledProps--font StyledProps--main Button--with-current-color Button--iconOnly Button--withLeftIcon Button--variation Button--variation-icon Button--size Button--small"
          tabindex="0"
          type="button"
        >
          <span
            class="bp3-icon bp3-icon-stop StyledProps--main"
            icon="stop"
          >
            <svg
              data-icon="stop"
              height="16"
              viewBox="0 0 16 16"
              width="16"
            >
              <desc>
                stop
              </desc>
              <path
                d="M12 3H4c-.55 0-1 .45-1 1v8c0 .55.45 1 1 1h8c.55 0 1-.45 1-1V4c0-.55-.45-1-1-1z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
        </button>
      </span>
    </span>
    <span
      class="bp3-popover-wrapper bp3-dark"
    >
      <span
        class="bp3-popover-target"
      >
        <button
          aria-label="execution menu actions"
          class="bp3-button Button--button StyledProps--font StyledProps--main Button--with-current-color Button--iconOnly Button--withLeftIcon Button--variation Button--variation-icon"
          type="button"
        >
          <span
            class="bp3-icon StyledProps--main"
            data-icon="Options"
          >
            <svg
              fill="currentColor"
              height="16"
              viewBox="0 0 4 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <circle
                cx="2"
                cy="2"
                r="1.5"
              />
              <circle
                cx="2"
                cy="8"
                r="1.5"
              />
              <circle
                cx="2"
                cy="14"
                r="1.5"
              />
            </svg>
          </span>
        </button>
      </span>
    </span>
  </div>
</div>
`;

exports[`<ExecutionActions /> tests snapshot tests "Running" status: Menu 1`] = `
<ul
  class="bp3-menu"
>
  <a
    class="link"
    href="/account/TEST_ACCOUNT_ID/cd/orgs/TEST_ORG/projects/TEST_PROJECT/pipelines/TEST_PIPELINE/pipeline-studio/"
  >
    <li
      class=""
    >
      <div
        class="bp3-menu-item bp3-popover-dismiss"
      >
        <div
          class="bp3-text-overflow-ellipsis bp3-fill"
        >
          editPipeline
        </div>
      </div>
    </li>
  </a>
  <li
    class=""
  >
    <a
      class="bp3-menu-item bp3-disabled"
      tabindex="-1"
    >
      <div
        class="bp3-text-overflow-ellipsis bp3-fill"
      >
        pipeline.execution.actions.rerunPipeline
      </div>
    </a>
  </li>
  <li
    class=""
  >
    <a
      class="bp3-menu-item bp3-popover-dismiss"
    >
      <div
        class="bp3-text-overflow-ellipsis bp3-fill"
      >
        pipeline.execution.actions.abortPipeline
      </div>
    </a>
  </li>
  <li
    class=""
  >
    <a
      class="bp3-menu-item bp3-popover-dismiss"
    >
      <div
        class="bp3-text-overflow-ellipsis bp3-fill"
      >
        pipeline.execution.actions.pausePipeline
      </div>
    </a>
  </li>
  <li
    class=""
  >
    <a
      class="bp3-menu-item bp3-disabled"
      tabindex="-1"
    >
      <div
        class="bp3-text-overflow-ellipsis bp3-fill"
      >
        pipeline.execution.actions.resumePipeline
      </div>
    </a>
  </li>
</ul>
`;

exports[`<ExecutionActions /> tests snapshot tests "Running" status: container 1`] = `
<div>
  <div
    class="Layout--horizontal StyledProps--main"
  >
    <span
      class="bp3-popover-wrapper"
    >
      <span
        class="bp3-popover-target"
      >
        <button
          aria-label="pipeline.execution.actions.pausePipeline"
          class="bp3-button Button--button StyledProps--font StyledProps--main Button--with-current-color Button--iconOnly Button--withLeftIcon Button--variation Button--variation-icon Button--size Button--small"
          tabindex="0"
          type="button"
        >
          <span
            class="bp3-icon bp3-icon-pause StyledProps--main"
            icon="pause"
          >
            <svg
              data-icon="pause"
              height="16"
              viewBox="0 0 16 16"
              width="16"
            >
              <desc>
                pause
              </desc>
              <path
                d="M6 3H4c-.55 0-1 .45-1 1v8c0 .55.45 1 1 1h2c.55 0 1-.45 1-1V4c0-.55-.45-1-1-1zm6 0h-2c-.55 0-1 .45-1 1v8c0 .55.45 1 1 1h2c.55 0 1-.45 1-1V4c0-.55-.45-1-1-1z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
        </button>
      </span>
    </span>
    <span
      class="bp3-popover-wrapper"
    >
      <span
        class="bp3-popover-target"
      >
        <button
          aria-label="pipeline.execution.actions.abortPipeline"
          class="bp3-button Button--button StyledProps--font StyledProps--main Button--with-current-color Button--iconOnly Button--withLeftIcon Button--variation Button--variation-icon Button--size Button--small"
          tabindex="0"
          type="button"
        >
          <span
            class="bp3-icon bp3-icon-stop StyledProps--main"
            icon="stop"
          >
            <svg
              data-icon="stop"
              height="16"
              viewBox="0 0 16 16"
              width="16"
            >
              <desc>
                stop
              </desc>
              <path
                d="M12 3H4c-.55 0-1 .45-1 1v8c0 .55.45 1 1 1h8c.55 0 1-.45 1-1V4c0-.55-.45-1-1-1z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
        </button>
      </span>
    </span>
    <span
      class="bp3-popover-wrapper bp3-dark"
    >
      <span
        class="bp3-popover-target"
      >
        <button
          aria-label="execution menu actions"
          class="bp3-button Button--button StyledProps--font StyledProps--main Button--with-current-color Button--iconOnly Button--withLeftIcon Button--variation Button--variation-icon"
          type="button"
        >
          <span
            class="bp3-icon StyledProps--main"
            data-icon="Options"
          >
            <svg
              fill="currentColor"
              height="16"
              viewBox="0 0 4 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <circle
                cx="2"
                cy="2"
                r="1.5"
              />
              <circle
                cx="2"
                cy="8"
                r="1.5"
              />
              <circle
                cx="2"
                cy="14"
                r="1.5"
              />
            </svg>
          </span>
        </button>
      </span>
    </span>
  </div>
</div>
`;

exports[`<ExecutionActions /> tests snapshot tests "Success" status: Menu 1`] = `
<ul
  class="bp3-menu"
>
  <a
    class="link"
    href="/account/TEST_ACCOUNT_ID/cd/orgs/TEST_ORG/projects/TEST_PROJECT/pipelines/TEST_PIPELINE/pipeline-studio/"
  >
    <li
      class=""
    >
      <div
        class="bp3-menu-item bp3-popover-dismiss"
      >
        <div
          class="bp3-text-overflow-ellipsis bp3-fill"
        >
          editPipeline
        </div>
      </div>
    </li>
  </a>
  <li
    class=""
  >
    <a
      class="bp3-menu-item bp3-popover-dismiss"
    >
      <div
        class="bp3-text-overflow-ellipsis bp3-fill"
      >
        pipeline.execution.actions.rerunPipeline
      </div>
    </a>
  </li>
  <li
    class=""
  >
    <a
      class="bp3-menu-item bp3-disabled"
      tabindex="-1"
    >
      <div
        class="bp3-text-overflow-ellipsis bp3-fill"
      >
        pipeline.execution.actions.abortPipeline
      </div>
    </a>
  </li>
  <li
    class=""
  >
    <a
      class="bp3-menu-item bp3-disabled"
      tabindex="-1"
    >
      <div
        class="bp3-text-overflow-ellipsis bp3-fill"
      >
        pipeline.execution.actions.pausePipeline
      </div>
    </a>
  </li>
  <li
    class=""
  >
    <a
      class="bp3-menu-item bp3-disabled"
      tabindex="-1"
    >
      <div
        class="bp3-text-overflow-ellipsis bp3-fill"
      >
        pipeline.execution.actions.resumePipeline
      </div>
    </a>
  </li>
</ul>
`;

exports[`<ExecutionActions /> tests snapshot tests "Success" status: container 1`] = `
<div>
  <div
    class="Layout--horizontal StyledProps--main"
  >
    <span
      class="bp3-popover-wrapper bp3-dark"
    >
      <span
        class="bp3-popover-target"
      >
        <button
          aria-label="execution menu actions"
          class="bp3-button Button--button StyledProps--font StyledProps--main Button--with-current-color Button--iconOnly Button--withLeftIcon Button--variation Button--variation-icon"
          type="button"
        >
          <span
            class="bp3-icon StyledProps--main"
            data-icon="Options"
          >
            <svg
              fill="currentColor"
              height="16"
              viewBox="0 0 4 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <circle
                cx="2"
                cy="2"
                r="1.5"
              />
              <circle
                cx="2"
                cy="8"
                r="1.5"
              />
              <circle
                cx="2"
                cy="14"
                r="1.5"
              />
            </svg>
          </span>
        </button>
      </span>
    </span>
  </div>
</div>
`;

exports[`<ExecutionActions /> tests snapshot tests "Suspended" status: Menu 1`] = `
<ul
  class="bp3-menu"
>
  <a
    class="link"
    href="/account/TEST_ACCOUNT_ID/cd/orgs/TEST_ORG/projects/TEST_PROJECT/pipelines/TEST_PIPELINE/pipeline-studio/"
  >
    <li
      class=""
    >
      <div
        class="bp3-menu-item bp3-popover-dismiss"
      >
        <div
          class="bp3-text-overflow-ellipsis bp3-fill"
        >
          editPipeline
        </div>
      </div>
    </li>
  </a>
  <li
    class=""
  >
    <a
      class="bp3-menu-item bp3-popover-dismiss"
    >
      <div
        class="bp3-text-overflow-ellipsis bp3-fill"
      >
        pipeline.execution.actions.rerunPipeline
      </div>
    </a>
  </li>
  <li
    class=""
  >
    <a
      class="bp3-menu-item bp3-disabled"
      tabindex="-1"
    >
      <div
        class="bp3-text-overflow-ellipsis bp3-fill"
      >
        pipeline.execution.actions.abortPipeline
      </div>
    </a>
  </li>
  <li
    class=""
  >
    <a
      class="bp3-menu-item bp3-disabled"
      tabindex="-1"
    >
      <div
        class="bp3-text-overflow-ellipsis bp3-fill"
      >
        pipeline.execution.actions.pausePipeline
      </div>
    </a>
  </li>
  <li
    class=""
  >
    <a
      class="bp3-menu-item bp3-disabled"
      tabindex="-1"
    >
      <div
        class="bp3-text-overflow-ellipsis bp3-fill"
      >
        pipeline.execution.actions.resumePipeline
      </div>
    </a>
  </li>
</ul>
`;

exports[`<ExecutionActions /> tests snapshot tests "Suspended" status: container 1`] = `
<div>
  <div
    class="Layout--horizontal StyledProps--main"
  >
    <span
      class="bp3-popover-wrapper bp3-dark"
    >
      <span
        class="bp3-popover-target"
      >
        <button
          aria-label="execution menu actions"
          class="bp3-button Button--button StyledProps--font StyledProps--main Button--with-current-color Button--iconOnly Button--withLeftIcon Button--variation Button--variation-icon"
          type="button"
        >
          <span
            class="bp3-icon StyledProps--main"
            data-icon="Options"
          >
            <svg
              fill="currentColor"
              height="16"
              viewBox="0 0 4 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <circle
                cx="2"
                cy="2"
                r="1.5"
              />
              <circle
                cx="2"
                cy="8"
                r="1.5"
              />
              <circle
                cx="2"
                cy="14"
                r="1.5"
              />
            </svg>
          </span>
        </button>
      </span>
    </span>
  </div>
</div>
`;
